containers/kubernetes/staging/ipfs.yml
apiVersion: v1
kind: Service
metadata:
  name: ipfs
spec:
  type: NodePort
  ports:
  - name: "api"
    port: 5001
    protocol: "TCP"
  - name: "gateway"
    port: 8080
    protocol: "TCP"
  selector:
    app: ipfs
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ipfs
  labels:
    name: ipfs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: ipfs
        app: ipfs
    spec:
      containers:
      - name: ipfs
        image: "ipfs/go-ipfs:master"
        command: ["/usr/local/bin/start_ipfs"]
        ports:
        - containerPort: 5001
          name: "api"
          protocol: "TCP"
        - containerPort: 8080
          name: "gateway"
          protocol: "TCP"
        volumeMounts:
          - mountPath: /data/ipfs
            name: ipfs-data
      volumes:
        - name: ipfs-data
          gcePersistentDisk:
            pdName: ipfs-data
            fsType: ext4
