containers/kubernetes/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-clusterissuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - secretName: bridge-staging-cert
      hosts:
        - bridge.staging.originprotocol.com
    - secretName: dapp-staging-cert
      hosts:
        - dapp.staging.originprotocol.com
    - secretName: ipfs-staging-cert
      hosts:
        - gateway.staging.originprotocol.com
    - secretName: messaging-staging-cert
      hosts:
        - messaging.staging.originprotocol.com
  rules:
  - host: bridge.staging.originprotocol.com
    http:
      paths:
      - path: /
        backend:
          serviceName: origin-bridge
          servicePort: 5000
  - host: dapp.staging.originprotocol.com
    http:
      paths:
        - path: /
          backend:
            serviceName: origin-dapp
            servicePort: 80
  - host: gateway.staging.originprotocol.com
    http:
      paths:
        # Only allow the add API call through to the IPFS API
        - path: /api/v0/add
          backend:
            serviceName: ipfs
            servicePort: 5001
        # IFPS read only gateway
        - path: /
          backend:
            serviceName: ipfs
            servicePort: 8080
  - host: messaging.staging.originprotocol.com
    http:
      paths:
        - path: /
          backend:
            serviceName: origin-messaging-ipfs
            servicePort: 9012
