containers/kubernetes/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: bridge.originprotocol.com
    http:
      paths:
      - path: /
        backend:
          serviceName: origin-bridge
          servicePort: 5000
  - host: dapp.originprotocol.com
    http:
      paths:
        - path: /
          backend:
            serviceName: origin-dapp
            servicePort: 80
  - host: gateway.originprotocol.com
    http:
      paths:
        - path: /
          backend:
            serviceName: ipfs
            servicePort: 8080
        - path: /api
          backend:
            serviceName: ipfs
            servicePort: 5001
        - path: /webui
          backend:
            serviceName: ipfs
            servicePort: 5001
